[package]
name = "zymogen"
version = "0.1.0"
authors = ["Michael Lazear"]
repository = "https://github.com/zymogen/zymogen.git"
homepage = "https://github.com/zymogen/zymogen"
license = "MIT"
readme = "README.md"
description = "Optimizing interpeter and compiler for functional languages"
keywords = ["interpreter", "compiler", "functional", "language"]
edition = "2018"

[dependencies]
colored = "1.7.0"